--- a/HAND_GESTURE_RECOGNITION.ipynb
+++ b/HAND_GESTURE_RECOGNITION.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Hand Gesture Recognition -\n",
+    "#Hand Gesture Recognition \n",
     "In this group project, you are going to build a 3D Conv model that will be able to predict the 5 gestures correctly. Please import the following libraries to get started."
    ]
   },
