--- a/Hand_Gesture_Recognition_.ipynb
+++ b/Hand_Gesture_Recognition_.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We set the random seed so that the results don't vary drastically."
+    "set the random seed so that the results don't vary drastically."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this block, you read the folder names for training and validation. You also set the `batch_size` here. Note that you set the batch size in such a way that you are able to use the GPU in full capacity. You keep increasing the batch size until the machine throws an error."
+    "In this block,read the folder names for training and validation.set the `batch_size` here. Note that you set the batch size in such a way that you are able to use the GPU in full capacity. You keep increasing the batch size until the machine throws an error."
    ]
   },
   {
